test/samples/invalid/cfg/no_terminator.maruir
fun foo()
locals a: uint8, b: uint8, c: uint8;
{
    entry:
        a := b + c;
    bb1:
        b := a + c;
        return;
}